--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.33.2",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.11.0",
     "react": "^18.2.0",
